--- a/Asset/Style/mainpage.css
+++ b/Asset/Style/mainpage.css
@@ -1,13 +1,34 @@
-body{
-    width: 100vw;
-    height: 100vh;
-    background-image: url("/Asset/Image/quantum-gradient.png");
-    background-size: cover;
+@import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Kiwi+Maru:wght@500&display=swap');
+
+body {
+    background-color: rgb(63, 50, 50);
 }
 
-.icon{
+.icon {
     margin: 50px;
-    width: 20%;
+    width: 30%;
     border-radius: 360px;
     box-shadow: 2px 0px 5px 0px rgba(0, 0, 0, 0.2)
+}
+
+.menu {
+    margin: 0 auto;
+}
+
+.menu-plate {
+    width: 100%;
+    height: auto;
+    padding: 0 auto;
+    border-radius: 2.5px;
+    background-color: rgba(30, 30, 35, 0.35);
+    backdrop-filter: blur(10px);
+}
+
+.menu-item {
+    background-color: rgba(0, 0, 0, 0);
+    border: rgba(0, 0, 0, 0);
+    padding: 6px 70px 6px 70px;
+    font-family: 'Kiwi Maru', serif;
+    text-align: center;
+    color: white;
 }
