--- a/Asset/Style/prof.css
+++ b/Asset/Style/prof.css
@@ -1,15 +1,34 @@
+@import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&family=Kiwi+Maru:wght@500&display=swap');
+
+p{
+    font-size: 17px;
+}
+
+h1{
+    font-size: 31px;
+}
+
+h2{
+    font-size: 28px;
+}
+
+h3{
+    font-size: 25px;
+}
+
+
 .content{
     width: 80%;
     height: auto;
-    margin: 0 auto;
-    background-color: rgba(40, 40, 45, 0.5);
+    margin: 50px auto;
+    background-color: rgba(40, 40, 45, 0.35);
     backdrop-filter: blur(10px);
     border-radius: 5px;
 }
 
 .content-inside{
     padding: 20px;
+    font-family: 'Kiwi Maru', serif;
     text-align: center;
-    font-size: 19px;
     color: white;
 }
