--- a/asset/style/page_style.css
+++ b/asset/style/page_style.css
@@ -9,6 +9,7 @@
     backdrop-filter: blur(20px);
 
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+    transform: translateZ(0);
 }
 
 .dev-tag p {
