--- a/asset/style/page_style.css
+++ b/asset/style/page_style.css
@@ -5,10 +5,13 @@
     width: 100%;
     height: auto;
     border-radius: 0 0 7px 7px;
-    background-color: rgba(250, 174, 20, 0.5);
+    
     backdrop-filter: blur(20px);
 
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+
+    background-color: rgba(250, 174, 20, 0.5);
+    -webkit-backdrop-filter: blur(30px);
     transform: translateZ(0);
 }
 
