--- a/asset/style/page_style.css
+++ b/asset/style/page_style.css
@@ -1,18 +1,26 @@
 .dev-tag {
     position: fixed;
+
     top: 0;
     left: 0;
+
     width: 100%;
     height: auto;
+
     border-radius: 0 0 7px 7px;
-    
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+    background-color: rgba(250, 174, 20, 0.5);
+
+    -webkit-backdrop-filter: blur(20px);
     backdrop-filter: blur(20px);
 
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
-
-    background-color: rgba(250, 174, 20, 0.5);
-    -webkit-backdrop-filter: blur(30px);
     transform: translateZ(0);
+}
+
+@supports not ((-webkit-backdrop-filter: blur(30px)) or (backdrop-filter: blur(30px))) {
+	.backdrop {
+		background: rgba(100, 148, 185, .9);
+	}
 }
 
 .dev-tag p {
