--- a/asset/style/page_style.css
+++ b/asset/style/page_style.css
@@ -7,6 +7,7 @@
     width: 100%;
     height: auto;
 
+    border: 1px solid rgba(255, 190, 50, 0.4);
     border-radius: 0 0 7px 7px;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
     background-color: rgba(250, 174, 20, 0.5);
@@ -15,12 +16,6 @@
     backdrop-filter: blur(20px);
 
     transform: translateZ(0);
-}
-
-@supports not ((-webkit-backdrop-filter: blur(30px)) or (backdrop-filter: blur(30px))) {
-	.backdrop {
-		background: rgba(100, 148, 185, .9);
-	}
 }
 
 .dev-tag p {
