--- a/asset/style/control_style.css
+++ b/asset/style/control_style.css
@@ -1,32 +1,27 @@
+:root {
+    --control_bg: rgba(255, 255, 255, 0.02);
+    --control_border: rgba(255, 255, 255, 0.07);
+    --control_shadow: rgba(0, 0, 0, 0.7)
+}
+
 .panel {
-    margin: 30px auto;
-    padding: 10px;
-
-    text-align: center;
-
+    margin: 70px auto;
+    padding: 15px;
     width: 70%;
     height: auto;
-
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.7);
-
-    border: 1px solid rgba(255, 255, 255, 0.07);
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0.02);
+    border-radius: 10px;
+    text-align: center;
+    background-color: var(--control_bg);
 }
 
 .button {
     margin: 10px;
-
     width: 170px;
     height: 45px;
-
     display: flex;
     justify-content: center;
     align-items: center;
-
-    border: 1px solid rgba(255, 255, 255, 0.05);
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.04);
+    background-color: var(--control_bg);
 }
 
 .button p {
