--- a/asset/style/main_style.css
+++ b/asset/style/main_style.css
@@ -22,7 +22,7 @@ h1 {
     font-size: 50px;
     color: var(--textcolor);
     font-family: var(--textfont);
-    letter-spacing: 3px;
+    letter-spacing: 4px;
 }
 
 h2 {
@@ -41,6 +41,13 @@ h3 {
 
 h4 {
     font-size: 20px;
+    color: var(--textcolor);
+    font-family: var(--textfont);
+    letter-spacing: 3px;
+}
+
+h5 {
+    font-size: 10px;
     color: var(--textcolor);
     font-family: var(--textfont);
     letter-spacing: 3px;
