--- a/asset/style/page_style.css
+++ b/asset/style/page_style.css
@@ -1,1 +1,23 @@
+.self-intro {
+    margin: 100px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: warp;
+    gap: 100px;
+}
 
+.self-icon {
+    width: 220px;
+    height: 220px;
+    border-radius: 256px;
+    box-shadow: 0 3px 30px 0 rgba(0, 0, 0, 0.2);
+}
+
+.self-birthday {
+    font-size: 15px;
+    color: rgb(199, 122, 137)
+}
+
+.self-main-text {
+    margin: 20px 0 0 0
+}
